# treesheets

./: Cargo.toml  clippy.toml  rustfmt.toml
examples/: read.cts  read.rs  test.rs
src/: document.rs  image.rs  lib.rs  reader.rs
src/cell/: color.rs  contents.rs  grid.rs  mod.rs  render_style.rs  text.rs  text_style.rs  time.rs  ty.rs
src/image/: mod.rs  ty.rs
